fix visibility bugs

--- a/css/style.css
+++ b/css/style.css
@@ -54,23 +54,23 @@ h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 4rem;
+    gap: 3rem;
 }
 
 .page-wrapper .start-info {
     background: #effbff;
     border: 3px solid #0085c0;
-    padding: 2.5rem 3rem;
+    padding: 1.5rem 2.5rem;
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
-    width: 500px;
+    width: 460px;
 }
 
 .page-wrapper .start-info h1 {
     color: #0085c0;
     letter-spacing: 2px;
-    font-size: 36px;
+    font-size: 32px;
     margin: 0 0 1rem 0;
 }
 
@@ -87,7 +87,7 @@ h1 {
 }
 
 .page-wrapper .start-info ul li {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     margin-bottom: .75rem;
     display: flex;
     align-items: center;
@@ -99,9 +99,9 @@ h1 {
 }
 
 .page-wrapper .start-info p {
-    font-size: 20px;
+    font-size: 18px;
     line-height: 1.25;
-    margin: 1rem 0 2rem 0;
+    margin: .5rem 0 1.25rem 0;
     color: #777;
 
 }
@@ -111,7 +111,7 @@ h1 {
 }
 
 .page-wrapper .image img {
-    width: 500px;
+    height: 240px;
 }
 
 
@@ -127,7 +127,7 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2rem;
+    gap: 1.5rem;
 }
 
 .game-wrapper .game-info {
@@ -135,7 +135,8 @@ h1 {
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    gap: 1rem;
+    padding-top: 1rem;
 }
 
 .game-wrapper .game-info h1 {
